Refactor varios en SoffHeap para usar metrics

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,27 @@
 project/project/
 project/target/
 target/
+
+
+*.class
+*.log
+.history
+*.sc
+
+# sbt specific
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.idea
+.idea_modules
+
+# Intellij
+.idea/
+*.iml
+*.iws
